--- a/CommanderGraphql/CommanderGraphql.csproj
+++ b/CommanderGraphql/CommanderGraphql.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.0.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.7" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.3.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
