--- a/CommanderGraphql/appsettings.Development.json
+++ b/CommanderGraphql/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CommandConn":"Server=localhost,1433; Initial Catalog=CommandsDB; User Id=sa; Password=P@55w0rd"
   }
 }
