add graphql Query

--- a/CommanderGraphql/appsettings.Development.json
+++ b/CommanderGraphql/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "CommandConn":"Server=localhost,1433; Initial Catalog=CommandsDB; User Id=sa; Password=P@55w0rd"
+    "CommandConn":"Server=localhost,1433;Database=CommandsDB;User Id=sa;Password=P@55w0rd"
   }
 }
